--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,29 +1,26 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      python: 3.8
-    commands:
-      - echo "Installing dependencies"
-      - pip install -r requirements.txt
-
   pre_build:
     commands:
-      - echo "Running pre-build steps"
-      - echo "Setting up environment variables"
-      
+      - echo "Logging into AWS ECR"
+      - aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 888577039597.dkr.ecr.eu-west-1.amazonaws.com
+
   build:
     commands:
-      - echo "Building the project"
-      - python setup.py install
-      
+      - echo "Building the Docker image"
+      - docker build -t network .
+      - docker tag network:latest 888577039597.dkr.ecr.eu-west-1.amazonaws.com/network:latest
+
   post_build:
     commands:
-      - echo "Post-build steps"
-      - echo "Build completed successfully"
-      
+      - echo "Pushing Docker image to ECR"
+      - docker push 888577039597.dkr.ecr.eu-west-1.amazonaws.com/network:latest
+      - echo "Saving build artifacts"
+      - mkdir -p NetworkPipeline/BuildArtif
+      - echo "Build successful" > NetworkPipeline/BuildArtif/build_info.txt
+
 artifacts:
   files:
-    - '/*'
-  discard-paths: yes
+    - "NetworkPipeline/BuildArtif/"
+  discard-paths: no
