--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,16 +3,16 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 888577039597.dkr.ecr.eu-west-1.amazonaws.com
+      - echo Logging in to Docker Hub...
+      - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
   build:
     commands:
       - echo Building the Docker image...
       - docker build -t my-app .
-      - docker tag my-app:latest 888577039597.dkr.ecr.eu-west-1.amazonaws.com/my-app-repo:latest
   post_build:
     commands:
       - echo Pushing the Docker image to ECR...
+      - docker tag my-app:latest 888577039597.dkr.ecr.eu-west-1.amazonaws.com/my-app-repo:latest
       - docker push 888577039597.dkr.ecr.eu-west-1.amazonaws.com/my-app-repo:latest
 artifacts:
   files:
