--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,19 +1,15 @@
 version: 0.2
-
 phases:
-  install:
+  pre_build:
     commands:
-      - echo Logging in to Docker Hub...
-      - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - echo Logging in to Amazon ECR...
+      - $(aws ecr get-login --no-include-email --region us-east-1)
   build:
     commands:
       - echo Building the Docker image...
-      - docker build -t my-app .
+      - docker build -t my-repository .
+      - docker tag my-repository:latest <aws_account_id>.dkr.ecr.us-east-1.amazonaws.com/my-repository:latest
   post_build:
     commands:
       - echo Pushing the Docker image to ECR...
-      - docker tag my-app:latest 888577039597.dkr.ecr.eu-west-1.amazonaws.com/my-app-repo:latest
-      - docker push 888577039597.dkr.ecr.eu-west-1.amazonaws.com/my-app-repo:latest
-artifacts:
-  files:
-    - '**/*'
+      - docker push <aws_account_id>.dkr.ecr.us-east-1.amazonaws.com/my-repository:latest
