--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,17 +1,26 @@
 version: 0.2
+
 phases:
   pre_build:
     commands:
-      - echo Logging in to Amazon ECR...
+      - echo "Logging into AWS ECR"
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 850995537373.dkr.ecr.us-east-1.amazonaws.com
-      - echo Logging in to Docker Hub...
-      - docker login --username <your_docker_username> --password <your_docker_password>
+
   build:
     commands:
-      - echo Building the Docker image...
-      - docker build -t my-repository .
-      - docker tag my-repository:latest 850995537373.dkr.ecr.us-east-1.amazonaws.com/my-repository:latest
+      - echo "Building the Docker image"
+      - docker build -t network .
+      - docker tag network:latest 850995537373.dkr.ecr.us-east-1.amazonaws.com/network:latest
+
   post_build:
     commands:
-      - echo Pushing the Docker image to ECR...
-      - docker push 850995537373.dkr.ecr.us-east-1.amazonaws.com/my-repository:latest
+      - echo "Pushing Docker image to ECR"
+      - docker push 850995537373.dkr.ecr.us-east-1.amazonaws.com/network:latest
+      - echo "Saving build artifacts"
+      - mkdir -p NetworkPipeline/BuildArtif
+      - echo "Build successful" > NetworkPipeline/BuildArtif/build_info.txt
+
+artifacts:
+  files:
+    - "NetworkPipeline/BuildArtif/"
+  discard-paths: no
